# aula18_bootcamp

./: README.md  exemplo.py  pokemon.db  pyproject.toml
src/: main.py  main_full.py  teste.py
src/controller/: c_pokemon.py
src/model/: m_pokemon.py
src/views/: v_pokemon.py
