[tool.poetry]
name = "aula18-bootcamp"
version = "0.1.0"
description = ""
authors = ["Wenderson <wenderson_fagundes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
